--- a/server/apps/distributed-pop3-app/sample-configuration/cassandra.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/cassandra.properties
@@ -52,3 +52,8 @@ cassandra.retryConnection.minDelay=5000
 # Falls back to default read consistency level if the blob is missing.
 # Defaults to false.
 # optimistic.consistency.level.enabled=false
+
+# Optional. Allows not to use lightweight transactions in CassandraMailRepository.
+# If disabled we implement an idempotent behaviour (duplicates are overridden, missing entries upon deletes are ignored).
+# Defaults to true.
+# mailrepository.strong.consistency=true
