--- a/server/apps/distributed-pop3-app/sample-configuration/jvm.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/jvm.properties
@@ -25,3 +25,8 @@
 #   - advanced: Enables output an advanced error log implying the place of allocation of the underlying object and would free resources.
 #   - testing: Enables output an advanced error log implying the place of allocation of the underlying object and rethrow an error, that action is being taken by the development team.
 #james.lifecycle.leak.detection.mode=simple
+
+# Should we add the host in the MDC logging context for incoming IMAP, SMTP, POP3? Doing so, a DNS resolution
+# is attempted for each incoming connection, which can be costly. Remote IP is always added to the logging context.
+# Optional. Boolean. Defaults to true.
+#james.protocols.mdc.hostname=true
