--- a/server/protocols/protocols-pop3/pom.xml
+++ b/server/protocols/protocols-pop3/pom.xml
@@ -164,4 +164,26 @@
         </dependency>
     </dependencies>
 
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <!--https://issues.apache.org/jira/browse/JAMES-3724-->
+                        <james.ligecycle.leak.detection.mode>testing</james.ligecycle.leak.detection.mode>
+                        <!--https://netty.io/wiki/reference-counted-objects.html#best-practices-to-avoid-leaks -->
+                        <io.netty.leakDetection.level>PARANOID</io.netty.leakDetection.level>
+                    </systemPropertyVariables>
+                    <argLine>-Xms512m -Xmx1024m</argLine>
+                    <reuseForks>true</reuseForks>
+                    <!-- Fail tests longer than 20 minutes, prevent form random locking tests -->
+                    <forkedProcessTimeoutInSeconds>1200</forkedProcessTimeoutInSeconds>
+                    <excludedGroups>unstable</excludedGroups>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
