--- a/server/apps/distributed-pop3-app/sample-configuration/rabbitmq.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/rabbitmq.properties
@@ -7,7 +7,7 @@ uri=amqp://rabbitmq:5672
 
 # Optional, default to the host specified as part of the URI.
 # Allow creating cluster aware connections.
-hosts=ip1:5672,ip2:5672
+# hosts=ip1:5672,ip2:5672
 
 # RabbitMQ Administration Management
 # Mandatory
