--- a/pom.xml
+++ b/pom.xml
@@ -3216,7 +3216,7 @@
                     <configuration>
                         <systemPropertyVariables>
                             <!--https://issues.apache.org/jira/browse/JAMES-3724-->
-                            <james.ligecycle.leak.detection.mode>testing</james.ligecycle.leak.detection.mode>
+                            <james.lifecycle.leak.detection.mode>testing</james.lifecycle.leak.detection.mode>
                         </systemPropertyVariables>
                         <argLine>-Xms512m -Xmx1024m</argLine>
                         <reuseForks>true</reuseForks>
