--- a/server/data/data-file/pom.xml
+++ b/server/data/data-file/pom.xml
@@ -159,6 +159,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <systemPropertyVariables>
+                        <james.lifecycle.leak.detection.mode>simple</james.lifecycle.leak.detection.mode>
+                    </systemPropertyVariables>
                     <reuseForks>true</reuseForks>
                     <forkCount>1C</forkCount>
                 </configuration>
