JAMES-1862 Fix several issues with STARTTLS command injection detection [BACKPORT]
Original PR: https://github.com/apache/james-project/pull/919

 - Parser differential for IMAP STARTTLS
 - Concurrency could lead to injected plain commands to be run as SSL encrypted

--- a/server/protocols/protocols-imap4/pom.xml
+++ b/server/protocols/protocols-imap4/pom.xml
@@ -132,6 +132,11 @@
             <artifactId>netty</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
         </dependency>
