--- a/server/mailrepository/mailrepository-cassandra/pom.xml
+++ b/server/mailrepository/mailrepository-cassandra/pom.xml
@@ -95,6 +95,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <systemPropertyVariables>
+                        <james.lifecycle.leak.detection.mode>simple</james.lifecycle.leak.detection.mode>
+                    </systemPropertyVariables>
                     <reuseForks>true</reuseForks>
                     <forkCount>2</forkCount>
                 </configuration>
