--- a/server/apps/distributed-app/sample-configuration/rabbitmq.properties
+++ b/server/apps/distributed-app/sample-configuration/rabbitmq.properties
@@ -26,9 +26,9 @@ management.password=guest
 # Configure retries count to retrieve a channel. Exponential backoff is performed between each retries.
 # Optional integer, defaults to 3
 #channel.pool.retries=3
-# Configure initial duration (in ms) between two channel retries. Exponential backoff is performed between each retries.
-# Optional integer, defaults to 50
-#channel.pool.min.delay.ms=50
+# Configure timeout duration (in ms) to obtain a rabbitmq channel. Defaults to 30 seconds.
+# Optional integer, defaults to 30 seconds.
+#channel.pool.max.delay.ms=30000
 # Configure the size of the channel pool.
 # Optional integer, defaults to 3
 #channel.pool.size=3
