--- a/event-bus/distributed/pom.xml
+++ b/event-bus/distributed/pom.xml
@@ -87,6 +87,10 @@
             <artifactId>reactor-rabbitmq</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
             <scope>test</scope>
