JAMES-3769 Document search overrides

--- a/server/apps/cassandra-app/sample-configuration/elasticsearch.properties
+++ b/server/apps/cassandra-app/sample-configuration/elasticsearch.properties
@@ -89,7 +89,7 @@ elasticsearch.metrics.reports.index=james-metrics
 #
 # Possible values are:
 #  - `org.apache.james.mailbox.cassandra.search.AllSearchOverride` Some IMAP clients uses SEARCH ALL to fully list messages in
-# a mailbox and detect deletions. This is typically done by clients not supporting QRESYNC and from am IMAP perspective
+# a mailbox and detect deletions. This is typically done by clients not supporting QRESYNC and from an IMAP perspective
 # is considered an optimisation as less data is transmitted compared to a FETCH command. Resolving such requests against
 # Cassandra is enabled by this search override and likely desirable.
 #  - `org.apache.james.mailbox.cassandra.search.UidSearchOverride`. Same as above but restricted by ranges.
