--- a/pom.xml
+++ b/pom.xml
@@ -2441,7 +2441,7 @@
                         <groupId>org.springframework.osgi</groupId>
                         <artifactId>spring-osgi-core</artifactId>
                     </exclusion>
-                    <!-- exlude this, its only used in the authentication plugin which we don't use -->
+                    <!-- exclude this, it's only used in the authentication plugin which we don't use -->
                     <exclusion>
                         <groupId>com.ibm.icu</groupId>
                         <artifactId>icu4j</artifactId>
@@ -2482,7 +2482,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-configuration2</artifactId>
-                <version>2.7</version>
+                <version>2.8.0</version>
                 <exclusions>
                     <exclusion>
                         <groupId>commons-logging</groupId>
