--- a/pom.xml
+++ b/pom.xml
@@ -633,7 +633,7 @@
         <assertj.version>3.3.0</assertj.version>
         <es.version>2.2.1</es.version>
         <es-reporter.version>6.0.0-RC3</es-reporter.version>
-        <guava.version>31.1-jre</guava.version>
+        <guava.version>30.1-jre</guava.version>
 
         <jutf7.version>1.0.0</jutf7.version>
         <apache.httpcomponents.version>4.5.13</apache.httpcomponents.version>
@@ -2079,6 +2079,11 @@
                 <version>${jutf7.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.chuusai</groupId>
+                <artifactId>shapeless_2.13</artifactId>
+                <version>2.3.9</version>
+            </dependency>
+            <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
                 <version>${jackson.version}</version>
@@ -2302,7 +2307,7 @@
             <dependency>
                 <groupId>eu.timepit</groupId>
                 <artifactId>refined_${scala.base}</artifactId>
-                <version>0.9.29</version>
+                <version>0.10.1</version>
             </dependency>
             <dependency>
                 <groupId>io.cucumber</groupId>
@@ -2689,6 +2694,11 @@
                 <groupId>org.jsoup</groupId>
                 <artifactId>jsoup</artifactId>
                 <version>1.15.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.julienrf</groupId>
+                <artifactId>play-json-derived-codecs_${scala.base}</artifactId>
+                <version>10.0.2</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
