--- a/server/apps/cassandra-app/docker-compose.yml
+++ b/server/apps/cassandra-app/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   james:
     depends_on:
-      - elasticsearch
+      - opensearch
       - cassandra
       - tika
     image: apache/james:cassandra-latest
