JAMES-3788 Fix PROXY protocol support with TLS
Given James is responsible of TLS termination, PROXY
protocol should be handled first, before SSL.

Add examples for TLS + PROXY support.

--- a/examples/proxy-smtp/haproxy.cfg
+++ b/examples/proxy-smtp/haproxy.cfg
@@ -3,9 +3,9 @@ global
 
 defaults
   mode tcp
-  timeout client 10s
+  timeout client 1800s
   timeout connect 5s
-  timeout server 10s
+  timeout server 1800s
   log global
   option tcplog
 
@@ -13,12 +13,26 @@ frontend smtp-frontend
   bind :25
   default_backend james-servers
 
+frontend smtps-frontend
+  bind :465
+  default_backend smtps-servers
+
 backend james-servers
   server james1 james:2525 send-proxy
+
+backend smtps-servers
+  server james1 james:465 send-proxy
 
 frontend imap-frontend
   bind :143
   default_backend james-servers-imap
 
+frontend imaps-frontend
+  bind :993
+  default_backend james-servers-imaps
+
 backend james-servers-imap
   server james1 james:143 send-proxy
+
+backend james-servers-imaps
+  server james1 james:993 send-proxy
