--- a/server/apps/distributed-pop3-app/sample-configuration/rabbitmq.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/rabbitmq.properties
@@ -3,10 +3,11 @@
 # Read https://james.apache.org/server/config-rabbitmq.html for further details
 
 # Mandatory
-uri=amqp://rabbitmq:5672
+# If you use a vhost, specify it as well at the end of the URI
+uri=amqp://rabbitmq:5672/vhost
 
 # Vhost to use for creating queues and exchanges
-# Optional, will default to default rabbitmq vhost "/" if not declared
+# Optional, only use this if you have invalid URIs containing characters like '_'
 # vhost=vhost1
 
 # Optional, default to the host specified as part of the URI.
